Bug 170035 - FILESAVE: PPTX -> PPTX internal names are exported in custom shape geometry
Summary: FILESAVE: PPTX -> PPTX internal names are exported in custom shape geometry
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
26.8.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Karthik
URL:
Whiteboard: target:26.8.0 target:26.2.0.2 target:...
Keywords:
Depends on:
Blocks: PPTX-Corrupted
  Show dependency treegraph
 
Reported: 2025-12-18 11:12 UTC by Karthik
Modified: 2026-01-27 14:43 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Karthik 2025-12-18 11:12:50 UTC
Description:
Open the [tdf127396](https://bugs.documentfoundation.org/attachment.cgi?id=153964) file and save it as PPTX, the resulting file can't be opened in PowerPoint

If we unzip the resulting file and look the formatted `slide1.xml`, in custom geometry in guide-list (a:gdLst), internal equation names are exported.

```
              <a:custGeom>
                <a:avLst/>
                <a:gdLst>
                 ----
                  <a:gd name="GluePoint7X" fmla="logheight"/>
                  <a:gd name="GluePoint11Y" fmla="logwidth"/>
                  <a:gd name="GluePoint12X" fmla="*/ 54 w 0"/>
                  <a:gd name="GluePoint12Y" fmla="logwidth"/>
                  <a:gd name="GluePoint13X" fmla="*/ 60 w 0"/>
 ```

Here logheight and logwidth are not accepted

Steps to Reproduce:
1. Open the file from the description
2. Save it as PPTX
3. The resulting file can't be opened in PowerPoint

Actual Results:
PowerPoint opens the file without any problem

Expected Results:
PowerPoint fails to open the file


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 25.8.3.2 (X86_64)
Build ID: 8ca8d55c161d602844f5428fa4b58097424e324e
CPU threads: 22; OS: Linux 6.12; UI render: default; VCL: gtk3
Locale: en-IN (en_IN); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2025-12-22 10:36:07 UTC
Fixed in https://git.libreoffice.org/core/+/458bfaed1b660f75da8d9a31cd2eb100710730d6%5E%21 but not in master yet
Comment 2 Commit Notification 2026-01-06 18:05:41 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5f80331513b13ba5ebb0b7362d34d5039698db99

tdf#170035:Add OOXML formula check for guidelist

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2026-01-08 16:08:25 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/e412f35e266bd08fb1a6d9f5f2a82d7761ea6cec

tdf#170035:Add OOXML formula check for guidelist

It will be available in 26.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2026-01-12 08:45:09 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/cdf095cec203f8ced45328559c09f1ef9777817d

tdf#170035:Add OOXML formula check for guidelist

It will be available in 25.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2026-01-15 16:18:37 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f956174c8d50cb6cc528c37ec42b2b63ffadb418

tdf#170035:Prefix numericals with "val" in guidelist

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2026-01-19 15:21:19 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/9ae49e667e30a06e6ebfc77528bd8466ae7456a5

tdf#170035:Prefix numericals with "val" in guidelist

It will be available in 26.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.