tdf#170035:PPTX->PPTX invalid values in guide-list

During PPTX export internal equation names are exported as guide values
in guide-list.

Change-Id: I179b47b57057fabf76e85b1c1d4aa62e0e3154d2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195837
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Michael Stahl <michael.stahl@collabora.com>